feat: add config rabbit mq

--- a/src/Services/Subscriptions/Distribt.Services.Subscriptions.Consumer/appsettings.json
+++ b/src/Services/Subscriptions/Distribt.Services.Subscriptions.Consumer/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Bus": {
+    "RabbitMQ": {
+      "Hostname" : "localhost",
+      "Username": "DistribtAdmin",
+      "Password" : "DistribtPass",
+      "Consumer": {
+        "IntegrationQueue" : "subscription-queue"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
