--- a/src/Shared/Distribt.Shared.Api/Distribt.Shared.Api.csproj
+++ b/src/Shared/Distribt.Shared.Api/Distribt.Shared.Api.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distribt.Shared.Serialization\Distribt.Shared.Serialization.csproj" />
+  </ItemGroup>
 </Project>
