--- a/src/Services/Subscriptions/Distribt.Services.Subscriptions.Consumer/Properties/launchSettings.json
+++ b/src/Services/Subscriptions/Distribt.Services.Subscriptions.Consumer/Properties/launchSettings.json
@@ -9,17 +9,7 @@
     }
   },
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5257",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
+    "Distribt.Services.Subscriptions.Consumer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
